--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
     - "2.7"
 env:
-    - CKANVERSION=master
-    - CKANVERSION=2.6
-    - CKANVERSION=2.7
+#    - CKANVERSION=master
+#    - CKANVERSION=2.6
+#    - CKANVERSION=2.7
     - CKANVERSION=2.8
 services:
     - redis-server
