--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
+os: linux
 language: python
+dist: bionic
 python:
     - "2.7"
 env:
 #    - CKANVERSION=master
 #    - CKANVERSION=2.6
 #    - CKANVERSION=2.7
-    - CKANVERSION=2.8
+    -  CKAN_GIT_REPO=ckan/ckan CKANVERSION=2.8
+    -  CKAN_GIT_REPO=qld-gov-au/ckan CKAN_BRANCH=qgov-master
+    -  CKAN_GIT_REPO=qld-gov-au/ckan CKAN_BRANCH=updateUploaderForDeleteAndGetFileFunctions
 services:
     - redis-server
     - postgresql
@@ -17,8 +21,8 @@ after_success:
     - coveralls
 
 # the new trusty images of Travis cause build errors with psycopg2, see https://github.com/travis-ci/travis-ci/issues/8897
-dist: trusty
-group: deprecated-2017Q4
+#dist: trusty
+#group: deprecated-2017Q4
 
 stages:
   - Flake8
@@ -27,7 +31,7 @@ stages:
 jobs:
   include:
     - stage: Flake8
-      env: FLAKE8=True
+      env: FLAKE8=True CKAN_GIT_REPO=ckan/ckan CKANVERSION=2.8
       install:
         - bash bin/travis-build.bash
         - pip install flake8==3.5.0
