--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,4 @@ jobs:
         # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
         - flake8 . --count --max-line-length=127 --statistics --exclude ckan
 
-cache:
-  directories:
-    - $HOME/.cache/pip
+cache: pip
