Use uploader to load cached item into store (#3)
* Use uploader to save cached items into upload store instead of direct local filesystem
* Upgrade archiver from local python file storage to uploader interface
* increase travis test range
* be backwards compatible when uploader interface is previous version
* try cache pip to speed up build

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ services:
     - redis-server
     - postgresql
 install:
+    - pip install -U pip wheel
     - bash bin/travis-build.bash
     - pip install coveralls
 script: sh bin/travis-run.sh
@@ -33,6 +34,7 @@ jobs:
     - stage: Flake8
       env: FLAKE8=True CKAN_GIT_REPO=ckan/ckan CKANVERSION=2.8
       install:
+        - pip install -U pip wheel
         - bash bin/travis-build.bash
         - pip install flake8==3.5.0
         - pip install pycodestyle==2.3.0
@@ -42,3 +44,5 @@ jobs:
         - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics --exclude ckan
         # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
         - flake8 . --count --max-line-length=127 --statistics --exclude ckan
+
+cache: pip
