--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ progressbar==2.3
 #SQLAlchemy>=0.6.6
 #requests>=1.1.0
 ckantoolkit>=0.0.4
+six>=1.0.0
 
 -e git+https://github.com/qld-gov-au/ckanext-report.git@0.1#egg=ckanext-report
