--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,13 @@
 # alternative https://github.com/ckan/ckan/blob/master/contrib/cookiecutter/ckan_extension/%7B%7Bcookiecutter.project%7D%7D/.github/workflows/test.yml
 name: Tests
 on: [push, pull_request]
+env:
+  CKAN_SQLALCHEMY_URL: postgresql://ckan_default:pass@postgres/ckan_test
+  CKAN_DATASTORE_WRITE_URL: postgresql://datastore_write:pass@postgres/datastore_test
+  CKAN_DATASTORE_READ_URL: postgresql://datastore_read:pass@postgres/datastore_test
+  CKAN_SOLR_URL: http://solr:8983/solr/ckan
+  CKAN_REDIS_URL: redis://redis:6379/1
+
 jobs:
   lint:
     runs-on: ubuntu-18.04
@@ -20,7 +27,11 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        ckan-version: [2.9, 2.9-py2, 2.8, 2.7]
+        ckan-version: [2.9, 2.9-py2, 2.8]
+        env:
+          - { REPORT_GIT_REPO: "datagovuk", REPORT_BRANCH: "master" }
+          - { REPORT_GIT_REPO: "qld-gov-au", REPORT_BRANCH: "0.1" }
+          - { REPORT_GIT_REPO: "qld-gov-au", REPORT_BRANCH: "develop" }
       fail-fast: false
 
     name: CKAN ${{ matrix.ckan-version }}
@@ -39,23 +50,41 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       redis:
           image: redis:3
-    env:
-      CKAN_SQLALCHEMY_URL: postgresql://ckan_default:pass@postgres/ckan_test
-      CKAN_DATASTORE_WRITE_URL: postgresql://datastore_write:pass@postgres/datastore_test
-      CKAN_DATASTORE_READ_URL: postgresql://datastore_read:pass@postgres/datastore_test
-      CKAN_SOLR_URL: http://solr:8983/solr/ckan
-      CKAN_REDIS_URL: redis://redis:6379/1
+    env: ${{ matrix.env }}
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install report and archiver plugins
+      run: |
+        echo "Installing dependency ckanext-report and its requirements..."
+        echo "Branch $REPORT_BRANCH from https://github.com/$REPORT_GIT_REPO/ckanext-report"
+        if [ ! -d ckanext-report ]; then
+          git clone --depth=50 --branch=$REPORT_BRANCH https://github.com/$REPORT_GIT_REPO/ckanext-report ckanext-report
+        fi
+        cd ckanext-report
+          if [ -f pip-requirements.txt ]; then
+            pip install -r pip-requirements.txt
+          fi
+          if [ -f dev-requirements.txt ]; then
+            pip install -r dev-requirements.txt
+          fi
+
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
+          pip install --no-deps -e .
+        cd ..
+
+
     - name: Install requirements
       run: |
         pip install -r dev-requirements.txt
         pip install -r pip-requirements.txt
+        pip install -r requirements.txt
         pip install -e .
         # Replace default path to CKAN core config file with the one on the container
         sed -i -e 's/use = config:.*/use = config:\/srv\/app\/src\/ckan\/test-core.ini/' test.ini
-        #sed -i -e 's/use = config:.*/use = config:\/srv\/app\/src\/ckan\/test-core.ini/' test_subclass.ini
 
     - name: Setup extension (CKAN >= 2.9)
       if: ${{ matrix.ckan-version != '2.7' && matrix.ckan-version != '2.8' }}
@@ -69,6 +98,6 @@ jobs:
 #        paster datastore set-permissions -c test-core.ini | sudo -u postgres psql -p $PG_PORT
     - name: Run all tests
       run: |
-        pytest --ckan-ini=test.ini --cov=ckanext.archiver ckanext/archiver/tests
-        #nosetests --nologcapture --with-pylons=test.ini --with-coverage --cover-package=ckanext.archiver --cover-inclusive --cover-erase --cover-tests
+        #pytest --ckan-ini=test.ini --cov=ckanext.archiver ckanext/archiver/tests
+        nosetests --nologcapture --with-pylons=test.ini --with-coverage --cover-package=ckanext.archiver --cover-inclusive --cover-erase --cover-tests
 
