--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,9 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        ckan-version: [2.9, 2.9-py2, 2.8]
+        # Not ready for 2.9 yet
+        # ckan-version: [2.9, 2.9-py2, 2.8]
+        ckan-version: [2.8]
         env:
           - { REPORT_GIT_REPO: "datagovuk", REPORT_BRANCH: "master" }
           - { REPORT_GIT_REPO: "qld-gov-au", REPORT_BRANCH: "0.1" }
