move ckanext-archiver config from test-core.ini to test.ini
- test-core.ini should be vanilla

--- a/test.ini
+++ b/test.ini
@@ -18,6 +18,8 @@ use = config:test-core.ini
 # Here we hard-code the database and a flag to make default tests
 # run fast.
 sqlalchemy.url = sqlite:///
+ckanext-archiver.cache_url_root = http://localhost:50001/resources/
+ckanext-archiver.max_content_length = 1000000
 # NB: other test configuration should go in test-core.ini, which is
 #     what the postgres tests use.
 
