--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ progressbar==2.3
 ckantoolkit>=0.0.4
 six>=1.0.0
 
--e git+https://github.com/qld-gov-au/ckanext-report.git@0.1#egg=ckanext-report
+ckanext-report
