--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 celery==3.1.25
 kombu==3.0.37
 progressbar==2.3
+#SQLAlchemy>=0.6.6
+#requests>=1.1.0
+ckantoolkit>=0.0.4
+six>=1.0.0
+
+ckanext-report
