--- a/test.ini
+++ b/test.ini
@@ -19,7 +19,7 @@ use = config:test-core.ini
 # run fast.
 sqlalchemy.url = sqlite:///
 
-ckan.plugins = archiver testipipe
+ckan.plugins = archiver report testipipe
 ckanext-archiver.cache_url_root = http://localhost:50001/resources/
 ckanext-archiver.max_content_length = 1000000
 # NB: other test configuration should go in test-core.ini, which is
