--- a/test.ini
+++ b/test.ini
@@ -28,7 +28,7 @@ ckanext-archiver.max_content_length = 1000000
 
 # Logging configuration
 [loggers]
-keys = root, activity, harvest, ckan, ckanext, sqlalchemy
+keys = root, activity, ckan, ckanext, sqlalchemy
 
 [handlers]
 keys = console
