--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,6 +87,7 @@ jobs:
       - name: Setup extension (CKAN >= 2.9)
         if: ${{ matrix.ckan-version != '2.7' && matrix.ckan-version != '2.8' }}
         run: |
+          pip install factory-boy==2.12.0
           ckan -c test.ini db init
           ckan -c test.ini archiver init
       - name: Setup extension (CKAN < 2.9)
